--- a/assignment3.2/Makefile
+++ b/assignment3.2/Makefile
@@ -8,7 +8,8 @@ OPT = -O1
 # the default target: add here all the targets that should be built when make
 # is called without parameter
 # use with `make`
-default: matrix1
+default: matrix1 matrix2
+
 
 # use different targets for the different assignment tasks, see first paragraph of assignment specification
 # below a pair of example targets that can be used for one task
@@ -21,6 +22,22 @@ matrix1: matrix1.o
 # example target: compiling matrix1
 matrix1.o: matrix1.c
 	gcc $(OPT) -c matrix1.c
+
+matrix2: matrix2.o
+	gcc $(OPT) -o matrix2 matrix2.o
+
+# example target: compiling matrix2
+matrix2.o: matrix2.c
+	gcc $(OPT) -c matrix2.c
+
+matrix2: matrix3.o
+	gcc $(OPT) -o matrix3 matrix3.o
+
+# example target: compiling matrix2
+matrix3.o: matrix3.c
+	gcc $(OPT) -c matrix3.c
+
+
 
 # cleanup target
 # use with 'make clean'
